containerized-transformer-workspace/templates/{{ .ServiceName }}-helmchart/templates/{{ .ServiceName }}-ingress.yaml

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    creationTimestamp: null
    labels:
        move2kube.konveyor.io/service: myproject
    name: myproject
spec:
    rules:
        - host: myproject.com
          http:
            paths:
                - backend:
                    service:
                        name: <~ .ServiceName ~>
                        port:
                            name: port-8080
                  path: /<~ .ServiceName ~>
                  pathType: Prefix
status:
    loadBalancer: {}

...
